2 upgrade to spring boot 3 and java 21 (#4)
* upgrade to Spring Boot 3, Java 21 and Gradle 8.6

* replace some code with new APIs; general clean up; update Dockerfile