@@ -1,21 +1,24 @@
 package com.dreamlab.nexplorer.api.impl;
 
+import java.math.BigInteger;
+import java.util.List;
+
 import com.dreamlab.nexplorer.api.FunctionCall;
 import com.dreamlab.nexplorer.common.Constants;
 import com.dreamlab.nexplorer.exception.IncorrectArgumentFormatException;
 import com.dreamlab.nexplorer.exception.WrongNumberOfArgumentsException;
 import com.dreamlab.nexplorer.service.PrimeNumberService;
+
 import org.junit.jupiter.api.Test;
 
-import java.math.BigInteger;
-import java.util.Collections;
-import java.util.List;
-
-import static java.util.Collections.emptyList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 class IsPrimeFunctionCallTest {
 
@@ -26,7 +29,7 @@ class IsPrimeFunctionCallTest {
     public void testCorrectArgumentsReturnTrue() {
         var arg = new BigInteger("87239781928389219873834");
         when(primeNumberServiceMock.isPrime(arg)).thenReturn(true);
-        assertEquals(Constants.TRUE_STRING, functionCall.execute(Collections.singletonList(arg.toString())));
+        assertEquals(Constants.TRUE_STRING, functionCall.execute(List.of(arg.toString())));
         verify(primeNumberServiceMock, times(1)).isPrime(any());
     }
 
@@ -34,14 +37,14 @@ class IsPrimeFunctionCallTest {
     public void testCorrectArgumentsReturnFalse() {
         var arg = new BigInteger("9182398129389123");
         when(primeNumberServiceMock.isPrime(arg)).thenReturn(false);
-        assertEquals(Constants.FALSE_STRING, functionCall.execute(Collections.singletonList(arg.toString())));
+        assertEquals(Constants.FALSE_STRING, functionCall.execute(List.of(arg.toString())));
         verify(primeNumberServiceMock, times(1)).isPrime(any());
     }
 
     @Test
     public void testAlphabetCharactersArguments() {
         var arg = "asdxzcbasdgweq";
-        List<String> args = Collections.singletonList(arg);
+        List<String> args = List.of(arg);
         var e = assertThrows(IncorrectArgumentFormatException.class, () -> functionCall.execute(args));
 
         assertEquals("Incorrect format for argument 'asdxzcbasdgweq'" +
@@ -53,7 +56,7 @@ class IsPrimeFunctionCallTest {
     @Test
     public void testSpecialCharactersArguments() {
         var arg = "*&!@*&*$@&";
-        List<String> args = Collections.singletonList(arg);
+        List<String> args = List.of(arg);
         var e = assertThrows(IncorrectArgumentFormatException.class, () -> functionCall.execute(args));
 
         assertEquals("Incorrect format for argument '*&!@*&*$@&'" +
@@ -65,7 +68,7 @@ class IsPrimeFunctionCallTest {
     @Test
     public void testAlphanumericCharactersArguments() {
         var arg = "as342dxas43432g2weq";
-        List<String> args = Collections.singletonList(arg);
+        List<String> args = List.of(arg);
         var e = assertThrows(IncorrectArgumentFormatException.class, () -> functionCall.execute(args));
 
         assertEquals("Incorrect format for argument 'as342dxas43432g2weq'" +
@@ -77,7 +80,7 @@ class IsPrimeFunctionCallTest {
     @Test
     public void testAlphanumericAndSpecialCharactersArguments() {
         var arg = "kjas7623^%112lksd98(";
-        List<String> args = Collections.singletonList(arg);
+        List<String> args = List.of(arg);
         var e = assertThrows(IncorrectArgumentFormatException.class, () -> functionCall.execute(args));
 
         assertEquals("Incorrect format for argument 'kjas7623^%112lksd98('" +
@@ -88,7 +91,7 @@ class IsPrimeFunctionCallTest {
 
     @Test
     public void testZeroArguments() {
-        var e = assertThrows(WrongNumberOfArgumentsException.class, () -> functionCall.execute(emptyList()));
+        var e = assertThrows(WrongNumberOfArgumentsException.class, () -> functionCall.execute(List.of()));
         assertEquals("Wrong number of arguments for function call to 'isPrime'." +
                 " Expected 1 arguments, got 0 ()", e.getMessage());
         verify(primeNumberServiceMock, never()).isPrime(any());
@@ -96,7 +99,7 @@ class IsPrimeFunctionCallTest {
 
     @Test
     public void testMoreThanOneArgument() {
-        var e = assertThrows(WrongNumberOfArgumentsException.class, () -> functionCall.execute(emptyList()));
+        var e = assertThrows(WrongNumberOfArgumentsException.class, () -> functionCall.execute(List.of()));
         assertEquals("Wrong number of arguments for function call to 'isPrime'." +
                 " Expected 1 arguments, got 0 ()", e.getMessage());
         verify(primeNumberServiceMock, never()).isPrime(any());
