@@ -1,5 +1,8 @@
 package com.dreamlab.nexplorer.controller;
 
+import java.util.Arrays;
+import java.util.List;
+
 import com.dreamlab.nexplorer.api.FunctionCallExecutor;
 import com.dreamlab.nexplorer.common.Constants;
 import com.dreamlab.nexplorer.controller.model.FunctionCallPayload;
@@ -7,32 +10,33 @@ import com.dreamlab.nexplorer.exception.UnknownFunctionException;
 import com.dreamlab.nexplorer.exception.WrongNumberOfArgumentsException;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-
 import static org.hamcrest.CoreMatchers.is;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.header;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(FunctionController.class)
+@WebMvcTest
+@Import(MocksConfiguration.class)
 public class FunctionControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @Autowired
     private FunctionCallExecutor functionCallExecutor;
 
     @Autowired
@@ -49,7 +53,7 @@ public class FunctionControllerTest {
     @Test
     public void testFunctionCallWithValidArguments() throws Exception {
         String functionName = "isPrime";
-        List<String> arguments = Collections.singletonList("76127863784678234");
+        List<String> arguments = List.of("76127863784678234");
         when(functionCallExecutor.execute(functionName, arguments)).thenReturn(Constants.TRUE_STRING);
 
         var path = "/function/call";
@@ -64,7 +68,7 @@ public class FunctionControllerTest {
     @Test
     public void testFunctionCallWithUnknownFunctionName() throws Exception {
         String functionName = "sqrt";
-        List<String> arguments = Collections.singletonList("76127863784678234");
+        List<String> arguments = List.of("76127863784678234");
         var e = new UnknownFunctionException(functionName);
         when(functionCallExecutor.execute(functionName, arguments)).thenThrow(e);
 
@@ -80,7 +84,7 @@ public class FunctionControllerTest {
     @Test
     public void testFunctionCallWithLessThanRequiredNumberOfArguments() throws Exception {
         String functionName = "isPrime";
-        List<String> arguments = Collections.emptyList();
+        List<String> arguments = List.of();
         var e = new WrongNumberOfArgumentsException(functionName, 1, arguments);
         when(functionCallExecutor.execute(functionName, arguments)).thenThrow(e);
 
